fixed overflow issue

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -4,19 +4,25 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    overflow-x:hidden;
 }
 
 html{
     font-size: 10px;
     font-family:'Montserrat', sans-serif;
-    width: 100vw;
-    height: 100vh;
+   
 }
 a{
     text-decoration: none;
     cursor: pointer;
     
 }
+
+a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    color: inherit;
+}
+
 p{
     text-align: left;
     font-size: 1.2rem;
@@ -509,6 +515,7 @@ img{
     font-size: 20px;
     cursor: pointer;
     outline: none;
+    border: none;
 }
 /* end projects section */
 
