--- a/staticfiles/css/home.css
+++ b/staticfiles/css/home.css
@@ -4,18 +4,22 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    overflow-x:hidden;
 }
 
 html{
     font-size: 10px;
     font-family:'Montserrat', sans-serif;
-    width: 100vw;
-    height: 100vh;
+   
 }
 a{
     text-decoration: none;
     cursor: pointer;
     
+}
+a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    color: inherit;
 }
 p{
     text-align: left;
@@ -509,6 +513,7 @@ img{
     font-size: 20px;
     cursor: pointer;
     outline: none;
+    border: none;
 }
 /* end projects section */
 
